--- a/sapui5routing/webapp/manifest.json
+++ b/sapui5routing/webapp/manifest.json
@@ -80,7 +80,11 @@
 			  "pattern": "",
 			  "name": "appHome",
 			  "target": "home"
-		   }],
+		   }, {
+				"pattern": "employees",
+				"name": "employeeList",
+				"target": "employees"
+			}],
 		   "targets": {
 			  "home": {
 				 "viewId": "home",
@@ -91,7 +95,13 @@
 				 "viewId": "notFound",
 				 "viewName": "NotFound",
 				 "transition": "show"
-			  }
+			  },
+				"employees": {
+					"viewId": "employeeList",
+					"viewPath": "sap.ui.demo.nav.view.employee",
+					"viewName": "EmployeeList",
+					"viewLevel" : 2
+				}
 		   }
 		}
 	}
