--- a/sapui5routing/webapp/manifest.json
+++ b/sapui5routing/webapp/manifest.json
@@ -89,7 +89,7 @@
 				"name": "employee",
 				"target": "employee"
 			}, {
-				"pattern": "employees/{employeeId}/resume",
+				"pattern": "employees/{employeeId}/resume:?query:",
 				"name": "employeeResume",
 				"target": "employeeResume"
 			}],
